# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config("libtracing_config") {
  include_dirs = [ "include" ]
}

source_set("libtracing") {
  all_dependent_configs = [ ":libtracing_config" ]
  sources = [
    "src/core/service_impl.cc",
    "src/unix_transport/unix_producer_proxy.cc",
    "src/unix_transport/unix_service_connection.cc",
    "src/unix_transport/unix_service_host_impl.cc",
    "src/unix_transport/unix_service_proxy_for_producer.cc",
    "src/unix_transport/unix_shared_memory.cc",
    "src/unix_transport/unix_socket.cc",
  ]
}

executable("unix_test") {
  testonly = true
  sources = [
    "src/test/test_task_runner.cc",
    "src/test/unix_test.cc",
  ]
  deps += [
    ":libtracing",
    "//buildtools:gmock",
    "//buildtools:gtest",
  ]
}

executable("libtracing_unittests") {
  testonly = true
  deps += [
    ":libtracing",
    "//buildtools:gmock",
    "//buildtools:gtest",
    "//buildtools:gtest_main",
  ]
  sources = [
    "src/unix_transport/unix_socket_unittest.cc",
  ]
}

executable("libtracing_benchmarks") {
  testonly = true
  deps += [ "//buildtools:benchmark" ]
  sources = [
    "hello_world_benchmark.cc",
  ]
}

executable("sanitizers_unittests") {
  testonly = true
  deps += [
    "//buildtools:gtest",
    "//buildtools:gtest_main",
  ]
  sources = [
    "sanitizers_unittest.cc",
  ]
}
